src/objects/User.object
<CustomObject>
    <fields>
        <fullName>BST_CHARTE_MEDICAL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>BST FR - this field is specific to France. User that have this field = TRUE will be requiered to fill in at least one of the Legal/Regulatory fields in events as per the Charte Medical process</description>
        <inlineHelpText>FR - this field identifies the users that should comply with the Charte Medical regulations in France</inlineHelpText>
        <label>Charte Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BST_COUNTRY__c</fullName>
        <description>Field to track the country of the User.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                    <isActive>false</isActive>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                    <isActive>false</isActive>
                    <label>Luxembourg</label>
                </value>
                <value>
                    <fullName>Monaco</fullName>
                    <isActive>false</isActive>
                    <label>Monaco</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_GroupOfUser__c</fullName>
        <description>value will be set as Sales force like ( IA , HM , PH , IV...) for TBM, RBM, AVP user 
&apos;MD&apos; for the MD National Account Manager 
&apos;ACC&apos; for ACC National Account Manager 
&apos;MKT&apos; for Marketing user</description>
        <inlineHelpText>value will be set as Sales force like ( IA , HM , PH , IV...) for TBM, RBM, AVP user 
&apos;MD&apos; for the MD National Account Manager 
&apos;ACC&apos; for ACC National Account Manager 
&apos;MKT&apos; for Marketing user</inlineHelpText>
        <label>Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>HD</fullName>
                </value>
                <value>
                    <fullName>MSL</fullName>
                </value>
                <value>
                    <fullName>PD</fullName>
                </value>
                <value>
                    <fullName>Hospital Products</fullName>
                </value>
                <value>
                    <fullName>Renal Chronic</fullName>
                </value>
                <value>
                    <fullName>Renal Acute</fullName>
                </value>
                <value>
                    <fullName>Advanced Surgery</fullName>
                    <isActive>false</isActive>
                    <label>Advanced Surgery</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_Group__c</fullName>
        <description>value will be set as Sales force like ( IA , HM , PH , IV...) for TBM, RBM, AVP user
&apos;MD&apos; for the MD National Account Manager
&apos;ACC&apos; for ACC National Account Manager
&apos;MKT&apos; for Marketing user</description>
        <inlineHelpText>value will be set as Sales force like ( IA , HM , PH , IV...) for TBM, RBM, AVP user
&apos;MD&apos; for the MD National Account Manager
&apos;ACC&apos; for ACC National Account Manager
&apos;MKT&apos; for Marketing user</inlineHelpText>
        <label>Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>HD</fullName>
                </value>
                <value>
                    <fullName>Hospital Products</fullName>
                </value>
                <value>
                    <fullName>MSL</fullName>
                </value>
                <value>
                    <fullName>PD</fullName>
                </value>
                <value>
                    <fullName>Renal Chronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_LEAVE_OF_ABSENCE__c</fullName>
        <description>Field used to mark if the user is on Leave. User records with this field populated will be excluded from dashboards for the period when they are not in the office.</description>
        <label>Leave of Absence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maternity/Paternity Leave</fullName>
                </value>
                <value>
                    <fullName>Long sick Leave</fullName>
                </value>
                <value>
                    <fullName>Sabbatical Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_MAIN_BAXTER_TEAM__c</fullName>
        <description>BST – Field to define the main Baxter team for the user</description>
        <label>Main Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Bax Company/Services</fullName>
                </value>
                <value>
                    <fullName>HC - Anesthesia/Critical Care</fullName>
                </value>
                <value>
                    <fullName>HC - BioSurgery</fullName>
                </value>
                <value>
                    <fullName>HC - Glob.Pharma Injectables</fullName>
                </value>
                <value>
                    <fullName>HC - Infusion Systems</fullName>
                </value>
                <value>
                    <fullName>HC - IV Therapies/SVP</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition</fullName>
                </value>
                <value>
                    <fullName>HC - Pharmacy Services</fullName>
                </value>
                <value>
                    <fullName>RE - Acute</fullName>
                </value>
                <value>
                    <fullName>RE - Hemo Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Peritoneal Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Water Treatment</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Small Volume Parenterals</fullName>
                </value>
                <value>
                    <fullName>HC - Productivity Sys</fullName>
                    <isActive>false</isActive>
                    <label>HC - Productivity Sys</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_OTHER_BAXTER_TEAM__c</fullName>
        <description>BST – Field to define the other Baxter team for the user</description>
        <label>Secondary Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BST_COUNTRY__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Bax Company/Services</fullName>
                </value>
                <value>
                    <fullName>HC - Anesthesia/Critical Care</fullName>
                </value>
                <value>
                    <fullName>HC - BioSurgery</fullName>
                </value>
                <value>
                    <fullName>HC - Glob.Pharma Injectables</fullName>
                </value>
                <value>
                    <fullName>HC - Infusion Systems</fullName>
                </value>
                <value>
                    <fullName>HC - IV Therapies/SVP</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition</fullName>
                </value>
                <value>
                    <fullName>HC - Pharmacy Services</fullName>
                </value>
                <value>
                    <fullName>RE - Acute</fullName>
                </value>
                <value>
                    <fullName>RE - Hemo Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Peritoneal Dialysis</fullName>
                </value>
                <value>
                    <fullName>RE - Water Treatment</fullName>
                </value>
                <value>
                    <fullName>HC - Nutrition Pediatrics</fullName>
                </value>
                <value>
                    <fullName>Small Volume Parenterals</fullName>
                </value>
                <value>
                    <fullName>HC - Productivity Sys</fullName>
                    <isActive>false</isActive>
                    <label>HC - Productivity Sys</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BST_SECONDARY_COUNTRY__c</fullName>
        <description>Field to track the secondary country of the User.</description>
        <label>Secondary Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Dom Com</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                    <isActive>false</isActive>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                    <isActive>false</isActive>
                    <label>Luxembourg</label>
                </value>
                <value>
                    <fullName>Monaco</fullName>
                    <isActive>false</isActive>
                    <label>Monaco</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BXGO_Price_Approver__c</fullName>
        <label>Price Approver</label>
        <relationshipName>BXEU_Price_Approver</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Baxter_Alias__c</fullName>
        <label>Baxter Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit for the users which is calculated based on Group value.</description>
        <formula>IF(ISNULL(Group__c) || ISBLANK(Group__c) ,
&apos;&apos;,
if(CONTAINS($Label.Group_ACC, Group__c &amp; &apos;;&apos;),
&apos;ACC&apos;,
if(CONTAINS($Label.Group_USMD, Group__c &amp; &apos;;&apos;),
&apos;USMD&apos;,
if(CONTAINS($Label.Group_BioSurgery , Group__c &amp; &apos;;&apos;),
&apos;BioSurg&apos;,
if(CONTAINS( $Label.Group_Renal , Group__c &amp; &apos;;&apos;),
&apos;Renal&apos;,
&apos;&apos;
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>value will be set as Sales force like ( IA , HM , PH , IV...) for TBM, RBM, AVP user
&apos;MD&apos; for the MD National Account Manager
&apos;ACC&apos; for ACC National Account Manager
&apos;MKT&apos; for Marketing user</description>
        <inlineHelpText>value will be set as Sales force like ( IA , HM , PH , IV...) for TBM, RBM, AVP user
&apos;MD&apos; for the MD National Account Manager
&apos;ACC&apos; for ACC National Account Manager
&apos;MKT&apos; for Marketing user</inlineHelpText>
        <label>Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cr_approver__c</fullName>
        <label>CR Approver</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>true</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Canada_Only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>Canada Only</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_CA_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Country_Local_Admin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Local</value>
        </filters>
        <label>Country Local Admin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Local_Admin_Role</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Local</value>
        </filters>
        <label>Country Local Admin Role</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Local_Admin_Role1</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>BST_CHARTE_MEDICAL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BST_CHARTE_MEDICAL__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Charte Medical</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FRNutritionUsers</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>BST_MAIN_BAXTER_TEAM__c</columns>
        <columns>BST_OTHER_BAXTER_TEAM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BST_COUNTRY__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>Nutrition</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_COUNTRY</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <label>FR Nution Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Turkey_Only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BST_COUNTRY__c</field>
            <operation>equals</operation>
            <value>Turkey</value>
        </filters>
        <label>Turkey Only</label>
        <language>en_US</language>
        <sharedTo>
            <group>Baxter_TR_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>akCountry_Local_Admin_Role</fullName>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <columns>TIMEZONE</columns>
        <columns>MARKETING_USER</columns>
        <columns>BST_COUNTRY__c</columns>
        <columns>BST_SECONDARY_COUNTRY__c</columns>
        <columns>BST_GroupOfUser__c</columns>
        <columns>BST_MAIN_BAXTER_TEAM__c</columns>
        <columns>BST_OTHER_BAXTER_TEAM__c</columns>
        <columns>BST_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>admin</value>
        </filters>
        <label>akCountry Local Admin Role</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BST_Charte_Medical_Only_for_France</fullName>
        <active>true</active>
        <description>Validating that &quot;Charte Medical&quot; can only be enabled for French users</description>
        <errorConditionFormula>AND(  TEXT(BST_COUNTRY__c) &lt;&gt;&quot;France&quot;, BST_CHARTE_MEDICAL__c =TRUE)</errorConditionFormula>
        <errorDisplayField>BST_COUNTRY__c</errorDisplayField>
        <errorMessage>Only French users can be under &quot;Charte Medical&quot; process. Please make sure this is enabled only for the correct users in France</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_Country_Is_Required</fullName>
        <active>true</active>
        <description>For BOOST Users Country field is required.</description>
        <errorConditionFormula>AND(  
	BEGINS( Profile.Name , &apos;BOOST&apos;)  , 
	ISBLANK( TEXT(BST_COUNTRY__c) )
)</errorConditionFormula>
        <errorDisplayField>BST_COUNTRY__c</errorDisplayField>
        <errorMessage>Country is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BST_Main_Baxter_Team_Is_Required</fullName>
        <active>true</active>
        <description>For BOOST Users Main Baxter Team is required.</description>
        <errorConditionFormula>AND(  
	BEGINS( Profile.Name , &apos;BOOST&apos;)  , 
	ISBLANK( TEXT(BST_MAIN_BAXTER_TEAM__c) )
)</errorConditionFormula>
        <errorDisplayField>BST_MAIN_BAXTER_TEAM__c</errorDisplayField>
        <errorMessage>Main Baxter Team is required.</errorMessage>
    </validationRules>
</CustomObject>